# eve

./: AGENTS.md  CHANGELOG.md  CHANGELOG.zh.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: build-installers.yml
packaging/entrypoints/: eve_desktop.py
scripts/: build_installers.py
src/eve/: cli.py  desktop_app.py  desktop_ipc.py  device_waveform.py  live_monitor.py  permissions.py  record_eve_24h.py  settings.py  startup.py  transcribe_recordings.py  waveform_bins.py
src/eve/asr/: qwen.py
src/eve/recorders/: live_vad_recorder.py
src/eve/utils/: cwd_utils.py  version_utils.py
