[project]
name = "eve"
version = "0.3.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "qwen-asr",
  "rich",
  "silero-vad",
  "soundfile",
  "sounddevice",
]

[project.scripts]
eve = "eve.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
